# 11_shimkoVAfpmi_cpp_labs

semester_1/lab1_introduction/: main  main.cpp  task2  task2.cpp  task3  task3.cpp  task4.cpp  task5  task5.cpp  task6  task6.cpp
semester_1/lab2_integer_arithmetics/: task8.cpp
semester_1/lab2_integer_arithmetics/test for lab 2/: CMakeLists.txt
semester_1/lab2_integer_arithmetics/test for lab 2/src/: primes.cpp
semester_1/lab2_integer_arithmetics/test for lab 2/tests/: test_primes.cpp
semester_1/lab3_pointers_and_arrays/: lab3_dynamic.cpp  lab3_static.cpp
semester_1/lab4_matrices/: task9.cpp
semester_1/lab5_strings/: task9.cpp
semester_1/lab7_class_vector/multiplication/: CMakeLists.txt  multiplication.cpp  multiplication.h
semester_1/lab7_class_vector/vector/: CMakeLists.txt  vector_impl  vector_impl.cpp  vector_impl.h
semester_1/rgr1_forward_list/forward_list/: forward_list_impl.cpp  forward_list_impl.h
semester_1/rgr2_vector_stl/part1/: main.cpp
semester_1/rgr2_vector_stl/part2/: input.txt  main.cpp  train.h
semester_1/rgr4_map_stl/: main.cpp  student.cpp  student.h  students.txt
semester_1/tests/: sort.cpp
